todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-files
          persistentVolumeClaim:
            claimName: todo-pvc
      containers:
        - name: todo-app
          image: famo1901/todo-app:1.13
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: todo-files
              mountPath: /usr/src/app/files
