todo_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 80
      targetPort: 3000
